--- a/interface/jade/page_login.jade
+++ b/interface/jade/page_login.jade
@@ -12,14 +12,16 @@ body
                             p C помощью E-mail
                             form.form-horizontal(role='form', method='post')
                                 input(type="hidden",name="csrfmiddlewaretoken",value=csrf_token)
-                                .form-group
+                                .form-group(class=error?"has-error":"")
                                     label.col-sm-2.control-label(for='inputEmail3') Email
                                     .col-sm-10
                                         input#inputEmail3.form-control(type='email', name='username')
-                                .form-group
+                                .form-group(class=error?"has-error":"")
                                     label.col-sm-2.control-label(for='inputPassword3') Пароль
                                     .col-sm-10
                                         input#inputPassword3.form-control(type='password', name='password')
+                                        if error
+                                            p=error
                                 .form-group
                                     .col-sm-offset-2.col-sm-10
                                         button.btn.btn-yellow1(type='submit') Войти
