--- a/interface/jade/page_playlist.jade
+++ b/interface/jade/page_playlist.jade
@@ -210,6 +210,6 @@ body
                                    .filter-block
                                 //
     include footer
-    //- delete film.description; delete playlist.items;
+    - delete film.description; delete playlist.items;
     script.
         $(document).ready(function () {window.InitApp({page_conf: !{JSON.stringify(film)}}, "Playlist")})
