--- a/interface/jade/page_login.jade
+++ b/interface/jade/page_login.jade
@@ -32,19 +32,19 @@ body
                             p C помощью соц.сетей
                             ul
                                 li
-                                    a(href='/login/vk-oauth', title='')
+                                    a(href='/login/vk-oauth', title='Вконтакте')
                                         img(src='static/img/i-vk-b.png', alt='')
                                         | ВКонтакте
                                 li
-                                    a(href='/login/facebook', title='')
+                                    a(href='/login/facebook', title='Facebook')
                                         img(src='static/img/i-fb-b.png', alt='')
                                         | Facebook
                                 li
-                                    a(href='/login/twitter', title='')
+                                    a(href='/login/twitter', title='Twitter')
                                         img(src='static/img/i-tw-b.png', alt='')
                                         | Twitter
                                 li
-                                    a(href='/login/google-oauth2', title='')
+                                    a(href='/login/google-oauth2', title='Google+')
                                         img(src='static/img/i-go-b.png', alt='')
                                         | Google +
                         //
