--- a/interface/jade/page_playlist.jade
+++ b/interface/jade/page_playlist.jade
@@ -20,8 +20,8 @@ body
                     h1.dots2.whiteh1.centerh1 Рекомендуемое
                     .list-film
                         .row#films
-                            //each item in playlist.films
-                            //    mixin film_thumb(item)
+                            each item in playlist.films
+                                mixin film_thumb(item)
     else
         .content(role='main')
             section.broun-block-playlist
@@ -149,17 +149,17 @@ body
                                 //
                                    .title-rate
                                 .rel.zmin.blue-num.num
-                                    i=film.ratings && film.ratings.cons?film.ratings.cons[0]:"-"
-                                p.text-center=(film.ratings && film.ratings.cons?film.ratings.cons[1]:0) + " голосов"
+                                    i=film.ratings && film.ratings.cons[0]?film.ratings.cons[0]:"-"
+                                p.text-center=(film.ratings && film.ratings.cons[1]?film.ratings.cons[1]:0) + " голосов"
                                 ul
                                     li
                                         | Рейтинг в
                                         strong=" Kinopoisk"
-                                        span=" " + (film.ratings && film.ratings.kp?film.ratings.kp[0]:"-")
+                                        span=" " + (film.ratings && film.ratings.kp[0]?film.ratings.kp[0]:"-")
                                     li
                                         | Рейтинг в
                                         strong=" IMDB"
-                                        span=" " + (film.ratings && film.ratings.imdb?film.ratings.imdb[0]:"-")
+                                        span=" " + (film.ratings && film.ratings.imdb[0]?film.ratings.imdb[0]:"-")
                             //
                                .block-rate
                             .brd-bottom-rate
